--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     font-family: 'Roboto', sans-serif;
     margin: 5px;
 }h1{
+    margin-top: 9%;
+    
     font-size: 50px;
 }
 #first{
@@ -22,7 +24,7 @@ height: 500px;
 .half{
     width: 40%;
     float: left;
-    margin-left:4% ;
+    margin-left:5% ;
     padding-left: 2%;
     padding-bottom: 3%;
 }
